# Anima-Artist-Mixer-Forge

./: CHANGELOG.md  README.md  nodes.py  pyproject.toml  sample workflow.json
.github/workflows/: ci.yml  publish.yml
anima_mixer/: __init__.py  constants.py  nodes_core.py  nodes_diagnostics.py  nodes_options.py  nodes_pack.py  nodes_probe.py  nodes_recipes.py  nodes_ui.py  options.py  parsing.py  patching.py  wrapper.py  wrapper_stabilizers.py
docs/: DEVELOPMENT.md  USAGE.md
test_results/: test_report.txt
tests/: automated_preset_test.py  live_automated_preset.py  live_diagnostics_check.py  test_diagnostics_nodes.py  test_node_helpers.py  test_probe_report_v2.py  test_tensor_math.py  test_upstream_ports.py  test_v26_syntax.py  test_workflow_json.py
workflow/: 01_quick_start.json  artist-layer-role-routing.json
workflow/node_usage_showcase/: 01_basic_recommended.json  02_clean_preset_apply_with_inspector.json  03_starter_guided_preset.json  04_chain_builder_preview_manual_crossattn.json  05_recipe_save_load_share.json  06_probe_and_report.json  README_zh.md
workflow/pr4_self_test_api/: 01_same_model_two_sampler.json  02_prompt_passthrough_direct_prompt.json  03_multi_artist_modes.json  04_routes_negative_timing.json  README_zh.md
