[project]
name = "anima-artist-mixer-forge"
description = "Forge fork of Anima-Artist-Mixer: a ComfyUI node pack for multi-artist mixing on the Anima model by hooking into its cross-attention layers."
version = "27.4.0"
license = { file = "LICENSE" }
dependencies = []
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/peter119lee/Anima-Artist-Mixer-Forge"
"Bug Tracker" = "https://github.com/peter119lee/Anima-Artist-Mixer-Forge/issues"

[tool.comfy]
PublisherId = "peter119lee"
DisplayName = "Anima Artist Mixer Forge"
Icon = ""

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["pr_evidence", "test_results", ".git", ".pytest_cache", ".ruff_cache"]
